<resources>
    <string name="app_name">TheBeerWiki</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Beer Wiki</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_beer_list">Beer List</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="lager">Lager</string>
    <string name="stout">Stout</string>
    <string name="ale">Ale</string>
    <string name="carling">Carling</string>
    <string name="fosters">Fosters</string>
    <string name="carlsberg">Carlsberg</string>
    <string name="peroni">Peroni</string>
    <string name="coors_light">Coors Light</string>
    <string name="stella_artois">Stella Artois</string>

    <string name="information">Information</string>
    <string name="alcohol_content">Alcohol Content</string>
    <string name="ingredients">Ingredients</string>
    <string name="country_of_origin">Country of Origin</string>
    <string name="brewery_location">Brewery Location</string>
    <string name="first_brewed">First Brewed</string>
    <string name="trivia">Trivia</string>

</resources>