<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.beerlist.BeerListFragment">

    <ImageView
        android:id="@+id/fosters_image"
        android:layout_width="205dp"
        android:layout_height="245dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/carling"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5
"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fosters_image" />

    <TableLayout
        android:id="@+id/fosters_table"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fosters_image">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0.35"
                android:background="@color/yellow_aa00"
                android:gravity="center"
                android:text="@string/information"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0.35"
                android:background="@color/yellow_300"
                android:gravity="center"
                android:text="@string/alcohol_content"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@color/yellow_300"
                android:gravity="center"
                android:text="4.0%" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0.35"
                android:background="@color/yellow_300"
                android:gravity="center"
                android:text="@string/ingredients"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@color/yellow_300"
                android:gravity="center"
                android:text="Barley, Malted Barley, Glucose Syrup" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0.35"
                android:background="@color/yellow_300"
                android:gravity="center"
                android:text="@string/brewery_location"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@color/yellow_300"
                android:gravity="center"
                android:text="Manchester" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0.35"
                android:background="@color/yellow_300"
                android:gravity="center"
                android:text="@string/country_of_origin"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@color/yellow_300"
                android:gravity="center"
                android:text="Australia" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0.35"
                android:background="@color/yellow_300"
                android:gravity="center"
                android:text="@string/first_brewed"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginHorizontal="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@color/yellow_300"
                android:gravity="center"
                android:text="1888" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/fosters_trivia_text"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/fosters_table"
        app:layout_constraintStart_toStartOf="@+id/fosters_table"
        app:layout_constraintTop_toBottomOf="@+id/fosters_table" />

    <TextView
        android:id="@+id/trivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trivia"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fosters_trivia_text"
        app:layout_constraintEnd_toEndOf="@+id/fosters_table"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/fosters_table"
        app:layout_constraintTop_toBottomOf="@+id/fosters_table" />

</androidx.constraintlayout.widget.ConstraintLayout>